Add recents page with status filters

--- a/public/admin.html
+++ b/public/admin.html
@@ -207,8 +207,9 @@
     <h1>Admin Panel</h1>
     <nav class="nav">
       <a href="/">Submit</a>
-      <a href="/admin.html" class="active">Admin</a>
+      <a href="/recents.html">Recents</a>
       <a href="/lookup.html">Lookup</a>
+      <a href="/admin.html" class="active">Admin</a>
     </nav>
 
     <div class="tabs">
