--- a/public/index.html
+++ b/public/index.html
@@ -107,8 +107,9 @@
     <h1>AEPi House Points</h1>
     <nav class="nav">
       <a href="/" class="active">Submit</a>
-      <a href="/admin.html">Admin</a>
+      <a href="/recents.html">Recents</a>
       <a href="/lookup.html">Lookup</a>
+      <a href="/admin.html">Admin</a>
     </nav>
 
     <div class="card">
