--- a/public/lookup.html
+++ b/public/lookup.html
@@ -149,8 +149,9 @@
     <h1>Lookup</h1>
     <nav class="nav">
       <a href="/">Submit</a>
-      <a href="/admin.html">Admin</a>
+      <a href="/recents.html">Recents</a>
       <a href="/lookup.html" class="active">Lookup</a>
+      <a href="/admin.html">Admin</a>
     </nav>
 
     <div class="card search-box">
