--- a/public/admin.html
+++ b/public/admin.html
@@ -215,6 +215,7 @@
     <div class="tabs">
       <button class="tab active" onclick="showTab('pending')" id="tab-pending">Pending <span class="tab-count" id="pending-count">0</span></button>
       <button class="tab" onclick="showTab('approved')" id="tab-approved">Approved <span class="tab-count" id="approved-count">0</span></button>
+      <a href="/api/export/csv" class="tab" style="text-decoration:none;text-align:center;">Export CSV</a>
     </div>
 
     <div id="pending-section" class="section active">
